--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-17  Gergely Nagy  <algernon@debian.org>
 
+	* debian/changelog: update for a new snapshot
+
 	* doc/ratpoison.1, doc/ratpoison.texi (Keystrokes): removed
 	false statement that C-t C-: is bound to colon.
 
