--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-24  shawn  <sabetts@vcn.bc.ca>
+
+	* src/actions.c (wingravity_to_string): Fix the north gravity
+	string to return "n" not "ng".
+
 2002-01-23  Shawn  <sabetts@vcn.bc.ca>
 
 	* src/manage.c (send_configure): Change parameters to X11 window,
