--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-26  shawn  <sabetts@vcn.bc.ca>
+
+	* src/list.c (set_active_window): Corrected a bug in determining
+	what a maxsize window is. Only one of width or height must be less
+	than the screen width or height for a window to qualify as a
+	maxsize window.
+
 2002-01-24  shawn  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (cmd_defbarloc): Read the location argument as a
