--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -159,9 +159,8 @@ Set the border width for the bar.
 When called non\-interactively with no arguments, the current
 setting is returned.
 .TP
-.B defbarloc \fILOC\fP
-Set the message bar location. \fILOC\fP can be one of `northeast', `northwest',
-`southeast', `southwest', or their abbreviations.
+.B defbargravity \fIG\fP
+Set the default alignment for the message bar. See the `gravity' command.
 
 When called non\-interactively with no arguments, the current
 setting is returned.
