--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-02-19  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/split.c: include string.h
+
+	* src/sbuf.c: likewise
+
+	* src/events.c: likewise
+
+	* src/communications.c: likewise
+
 2002-02-17  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/manage.c (update_normal_hints): fix debugging output to be
