--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.1.0
+** new commands "nextscreen" and "prevscreen"
+
 * Changes since 1.0.0
 ** defbarloc changed to defbargravity
 
