--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -7,7 +7,7 @@ ratpoison \- fatless X window manager
 \fIoptions\fP
 ]
 .SH DESCRIPTION
-ratpoison is a simple Window Manager with no fat library dependencies, no fancy graphics, no window decorations, and no flashy wank. It is largely modeled after GNU Screen which has done wonders in the virtual terminal market.
+ratpoison is a simple Window Manager with no fat library dependencies, no fancy graphics, no window decorations, and no rodent dependence. It is largely modeled after GNU Screen which has done wonders in the virtual terminal market.
 .PP
 All interaction with the window manager is done through keystrokes. ratpoison has a prefix map to minimize the key clobbering that cripples EMACS and other quality pieces of software.
 .PP
