--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-31  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/actions.c (cmd_bind): malloc the correct amount of memory for keydesc 
+	(cmd_unbind): likewise
+
 2002-07-28  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/main.c (handler): do not report badwindow errors if
