*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,3 +20,4 @@ Chr. v. Stuckrad <stucki@math.fu-berlin.de>
 Doug Kearns <djkea2@mugc.its.monash.edu.au>
 Mike Meyer <mwm@mired.org>
 Ben Leslie <benno@sesgroup.net>
+Dan Aloni <da-x@gmx.net>
