--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -683,10 +683,16 @@ Set the environment variable @var{env} to @var{value}
 @item source @var{file}
 Read a text file containing ratpoison commands.
 
-@item split
-@item hsplit
-Split the current window horizontally in two. The last accessed window
+@item split @var{n}
+@item hsplit @var{n}
+Split the current window horizontally. The last accessed window
 not occupying a frame will be the second window.
+
+@var{n} is either a ratio of the form @code{x/y} or a number. If it is
+a ratio then the two frames are sized according to the ratio. If it is
+a pixel, the original frame is resized to that many pixels. If @var{n}
+has a minus sign before it, then the new frame will be that many
+pixels.
 
 @item startup_message @var{state}
 Turn on or off the startup_message. This is most useful in your
@@ -706,9 +712,15 @@ Clear the value of the environment variable, @var{env}.
 @item version
 Print ratpoison version.  By default, this is bound to @kbd{C-t v}.
 
-@item vsplit
-Split the current window vertically in two. The last accessed window not
+@item vsplit @var{n}
+Split the current window vertically. The last accessed window not
 occupying a frame will be the second window.
+
+@var{n} is either a ratio of the form @code{x/y} or a number. If it is
+a ratio then the two frames are sized according to the ratio. If it is
+a pixel, the original frame is resized to that many pixels. If @var{n}
+has a minus sign before it, then the new frame will be that many
+pixels.
 
 @item windows @var{fmt}
 This displays the Program Bar which displays the windows you currently
