* src/main.c (init_defaults): set pointer warping to on by default.
* src/list.c (give_window_focus): only warp the pointer if the
warp setting is turned on.

* src/data.h (struct rp_defaults): new member, warp.

* src/actions.h (cmd_ward): new prototype

* src/actions.c (user_command): new command "warp"
(cmd_warp): new function

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,4 @@ Doug Kearns <djkea2@mugc.its.monash.edu.au>
 Mike Meyer <mwm@mired.org>
 Ben Leslie <benno@sesgroup.net>
 Dan Aloni <da-x@gmx.net>
+Tim Goodwin <tjg@star.le.ac.uk>
