* src/ratpoison.h[!HAVE_VARARG_MACROS]: PRINT_ERROR and PRINT_DEBUG are defined as void macros.
* src/events.c (client_msg): Add semicolon to the end of a
PRINT_DEBUG line.

* src/actions.c (cmd_bind): typecast data as a (char *) before
using it in (char *) pointer arithmetic.

* configure.in: Add check to see if the preprocessor has variable
argument macro capabilities.

--- a/AUTHORS
+++ b/AUTHORS
@@ -22,3 +22,4 @@ Mike Meyer <mwm@mired.org>
 Ben Leslie <benno@sesgroup.net>
 Dan Aloni <da-x@gmx.net>
 Tim Goodwin <tjg@star.le.ac.uk>
+Nicklas Lindgren <nili@lysator.liu.se>
